🚩🌐 feat/lang: add navbar components translation

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -16,5 +16,14 @@
     "seo": {
       "title": "Users"
     }
+  },
+  "components": {
+    "navbar": {
+      "toggle-menu": "Toggle menu",
+      "toggle-user-menu": "Toggle user menu",
+      "settings": "Settings",
+      "help": "Help",
+      "logout": "Logout"
+    }
   }
 }
