🚩🌐 feat/lang: add colormode component translation

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -24,6 +24,12 @@
       "settings": "Settings",
       "help": "Help",
       "logout": "Logout"
+    },
+    "color-mode": {
+      "toggle-theme": "Toggle theme",
+      "dark": "Dark",
+      "light": "Light",
+      "system": "System"
     }
   }
 }
