✨ feat: Implement DataTable component

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -113,6 +113,15 @@
       "dark": "Dark",
       "light": "Light",
       "system": "System"
+    },
+    "data-table": {
+      "add-btn": "Add",
+      "user": {
+        "title": "Users",
+        "description": "",
+        "btn-title": "User",
+        "username": "Username"
+      }
     }
   }
 }
