--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -120,6 +120,10 @@
       "display": "Display",
       "export": "Export",
       "error": "An error occurred during data recovery, please try again.",
+      "dichotomous-answers": {
+        "yes": "Yes",
+        "no": "No"
+      },
       "users": {
         "title": "Users",
         "btn-title": "User",
@@ -127,7 +131,9 @@
         "firstname": "Firstname",
         "lastname": "Lastname",
         "username": "Username",
-        "email": "Email"
+        "email": "Email",
+        "phone_number": "Phone number",
+        "has_newsletter": "Newsletter"
       },
       "filters": {
         "filter": "Filter",
