:bug: fix: Fix errors due to User model update and adapt auth errors

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -29,7 +29,8 @@
   },
   "toasts": {
     "error": {
-      "title": "Error"
+      "title": "Error",
+      "description": "An error occurred, please try again."
     }
   },
   "forms": {
@@ -78,7 +79,7 @@
           "placeholder": "Enter your email",
           "error": "Invalid email"
         },
-        "phone": {
+        "phone-number": {
           "label": "Phone",
           "placeholder": "Enter your phone number",
           "error": "Phone number must be between 10 and 14 characters"
