:bug: fix: Update error schema validator to match API

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -82,17 +82,17 @@
         "phone-number": {
           "label": "Phone",
           "placeholder": "Enter your phone number",
-          "error": "Phone number must be between 10 and 14 characters"
+          "error": "Phone number must be between 2 and 15 characters"
         },
         "password": {
           "label": "Password",
           "placeholder": "Enter your password",
-          "error": "String must contain at least 6 character(s)"
+          "error": "The password must contain at least 6 characters, including an uppercase and a lowercase letter, a number and a special character."
         },
         "password-confirmation": {
           "label": "Confirm password",
           "placeholder": "Confirm your password",
-          "error": "String must contain at least 6 character(s)"
+          "error": "Passwords must match"
         }
       },
       "submit": "Register",
