--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -82,17 +82,17 @@
         "phone-number": {
           "label": "Téléphone",
           "placeholder": "Entrez votre téléphone",
-          "error": "La chaîne doit contenir au moins 10 caractère(s) et au plus 14 caractère(s)"
+          "error": "La chaîne doit contenir au moins 2 caractère(s) et au plus 15 caractère(s)"
         },
         "password": {
           "label": "Mot de passe",
           "placeholder": "Entrez votre mot de passe",
-          "error": "La chaîne doit contenir au moins 6 caractère(s)"
+          "error": "Le mot de passe doit contenir au moins 6 caractères dont une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial"
         },
         "password-confirmation": {
           "label": "Confirmer le mot de passe",
           "placeholder": "Confirmez votre mot de passe",
-          "error": "La chaîne doit contenir au moins 6 caractère(s)"
+          "error": "Les mots de passe doivent correspondre"
         }
       },
       "submit": "Inscription",
