:rotating_light: fix: Fix all warnings / errors

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -127,9 +127,9 @@
       "export": "Export",
       "actions": {
         "title": "Actions",
-        "details": "Détails",
-        "edit": "Modifier",
-        "delete": "Supprimer"
+        "details": "Details",
+        "edit": "Edit",
+        "delete": "Delete"
       },
       "users": {
         "title": "Users",
@@ -151,6 +151,9 @@
       }
     },
     "details": {
+      "sheet": {
+        "title": "Details"
+      },
       "dates": {
         "format": "YYYY-MM-DD at HH:mm",
         "created-at": "Created on",
