--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -28,10 +28,9 @@
     }
   },
   "toasts": {
-    "error": {
-      "title": "Error",
-      "description": "An error occurred, please try again."
-    }
+    "error": "An error occurred, please try again.",
+    "delete": "The item has been successfully deleted.",
+    "restore": "The item has been successfully restored."
   },
   "forms": {
     "sign-in": {
@@ -129,7 +128,8 @@
         "title": "Actions",
         "details": "Details",
         "edit": "Edit",
-        "delete": "Delete"
+        "delete": "Delete",
+        "restore": "Restore"
       },
       "users": {
         "title": "Users",
@@ -167,6 +167,14 @@
         "has-newsletter": "Newsletter subscriber",
         "roles": "Roles"
       }
+    },
+    "delete-confirmation-dialog": {
+      "actions": {
+        "cancel": "Cancel",
+        "delete": "Delete"
+      },
+      "title": "Deletion confirmation",
+      "description": "Are you sure you want to delete this item?"
     }
   }
 }
