--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -2,10 +2,28 @@
   "app": {
     "title": "Collect & Verything"
   },
+  "sections": {
+    "service": {
+      "name": "Service"
+    },
+    "demo": {
+      "name": "Demo"
+    },
+    "prices": {
+      "name": "Prices"
+    },
+    "contact": {
+      "name": "Contact"
+    }
+  },
+  "account": {
+    "title": "My account"
+  },
   "dashboard": {
     "title": "Dashboard",
     "tooltip": "Dashboard",
     "welcome": "Welcome to the dashboard",
+    "main": "Main",
     "seo": {
       "title": "Dashboard"
     }
@@ -152,7 +170,8 @@
       "toggle-user-menu": "Toggle user menu",
       "settings": "Settings",
       "help": "Help",
-      "logout": "Logout"
+      "logout": "Logout",
+      "search-placeholder": "Search..."
     },
     "color-mode": {
       "toggle-theme": "Toggle theme",
@@ -215,6 +234,9 @@
       },
       "title": "Deletion confirmation",
       "description": "Are you sure you want to delete this item?"
+    },
+    "locale-switcher": {
+      "toggle-locale": "Change language"
     }
   }
 }
