:sparkles: feat: create contact form

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -19,7 +19,9 @@
       "name": "Prices"
     },
     "contact": {
-      "name": "Contact"
+      "name": "Contact",
+      "title": "Contact us",
+      "description": "Contact us if you have any questions or requests. We're here to help."
     }
   },
   "account": {
@@ -163,6 +165,36 @@
           "error": "The password must contain at least 6 characters, including an uppercase and a lowercase letter, a number and a special character."
         }
       }
+    },
+    "contact": {
+      "fields": {
+        "email": {
+          "label": "Email",
+          "placeholder": "Enter the email",
+          "error": "Invalid email"
+        },
+        "subject": {
+          "label": "Subject",
+          "placeholder": "Select a subject",
+          "error": "The subject is required",
+          "options": {
+            "general-inquiry": "General Inquiry",
+            "technical-support": "Technical Support",
+            "account-issue": "Account Issue",
+            "bug-report": "Bug Report",
+            "feedback": "Feedback",
+            "job-application": "Job Application",
+            "other": "Other"
+          }
+        },
+        "message": {
+          "label": "Message",
+          "placeholder": "Enter your message",
+          "error": "The message is required"
+        }
+      },
+      "success-message": "Your message has been sent successfully.",
+      "submit": "Send"
     }
   },
   "dichotomous-answers": {
