--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -1,6 +1,9 @@
 {
   "app": {
-    "title": "Collect & Verything"
+    "title": "Collect & Verything",
+    "meta": {
+      "description": "Découvrez Collect & Verything pour créer et gérer votre boutique en ligne facilement."
+    }
   },
   "sections": {
     "service": {
@@ -10,7 +13,8 @@
       "btn": {
         "primary": "Commencer",
         "secondary": "Présentation des fonctionnalités"
-      }
+      },
+      "img-alt": "Aperçu du dashboard d'administration d'un site e-commerce"
     },
     "prices": {
       "name": "Tarifs",
